--- a/src/data/translations/de.json
+++ b/src/data/translations/de.json
@@ -121,7 +121,7 @@
     "bookConsultation": "Buchen Sie eine 30-minütige Beratung mit unseren KI-Experten, um Ihre Geschäftsanforderungen und -möglichkeiten zu besprechen.",
     "scheduleNow": "Jetzt vereinbaren",
     "info": {
-      "email": "kontakt@aiexpress.de",
+      "email": "ai-express@outlook.com",
       "phone": "+49 123 456789",
       "address": "Technikstraße 123, Berlin, Deutschland"
     }
@@ -174,5 +174,62 @@
     "projects": "Projekte",
     "years": "Jahre",
     "coreValues": "Kernwerte"
+  },
+  "privacyPolicy": {
+    "nav": "Datenschutz",
+    "title": "Datenschutzerklärung",
+    "lastUpdated": "Letzte Aktualisierung: Dezember 2024",
+    "introduction": {
+      "title": "Einleitung",
+      "content": "Wir freuen uns sehr über Ihr Interesse an unserem Unternehmen. Datenschutz hat einen besonders hohen Stellenwert für die Geschäftsleitung der AI Express. Eine Nutzung der Internetseiten der AI Express ist grundsätzlich ohne jede Angabe personenbezogener Daten möglich. Sofern eine betroffene Person besondere Services unseres Unternehmens über unsere Internetseite in Anspruch nehmen möchte, könnte jedoch eine Verarbeitung personenbezogener Daten erforderlich werden. Ist die Verarbeitung personenbezogener Daten erforderlich und besteht für eine solche Verarbeitung keine gesetzliche Grundlage, holen wir generell eine Einwilligung der betroffenen Person ein."
+    },
+    "scope": {
+      "title": "Umfang der Verarbeitung personenbezogener Daten",
+      "content": "Wir verarbeiten personenbezogene Daten unserer Nutzer grundsätzlich nur, soweit dies zur Bereitstellung einer funktionsfähigen Website sowie unserer Inhalte und Leistungen erforderlich ist. Die Verarbeitung personenbezogener Daten unserer Nutzer erfolgt regelmäßig nur nach Einwilligung des Nutzers. Eine Ausnahme gilt in solchen Fällen, in denen eine vorherige Einholung einer Einwilligung aus tatsächlichen Gründen nicht möglich ist und die Verarbeitung der Daten durch gesetzliche Vorschriften gestattet ist."
+    },
+    "rights": {
+      "title": "Rechte der betroffenen Person",
+      "item1": "Auskunftsrecht: Sie haben das Recht, von dem Verantwortlichen eine Bestätigung darüber zu verlangen, ob Sie betreffende personenbezogene Daten verarbeitet werden.",
+      "item2": "Berichtigungsrecht: Sie haben das Recht, von dem Verantwortlichen die Berichtigung Sie betreffender unrichtiger personenbezogener Daten zu verlangen.",
+      "item3": "Löschungsrecht: Sie haben das Recht, von dem Verantwortlichen zu verlangen, dass Sie betreffende personenbezogene Daten unverzüglich gelöscht werden.",
+      "item4": "Einschränkungsrecht: Sie haben das Recht, von dem Verantwortlichen die Einschränkung der Verarbeitung zu verlangen.",
+      "item5": "Widerspruchsrecht: Sie haben das Recht, aus Gründen, die sich aus ihrer besonderen Situation ergeben, jederzeit gegen die Verarbeitung Sie betreffender personenbezogener Daten Widerspruch einzulegen."
+    },
+    "cookies": {
+      "title": "Cookies",
+      "content": "Die Internetseiten der AI Express verwenden Cookies. Cookies sind Textdateien, welche über einen Internetbrowser auf dem Computersystem des Nutzers abgelegt werden. Zahlreiche Internetseiten und Server verwenden Cookies. Viele Cookies enthalten eine sogenannte Cookie-ID. Eine Cookie-ID ist eine eindeutige Kennung des Cookies. Sie besteht aus einer Zeichenfolge, durch welche Internetseiten und Server dem konkreten Internetbrowser zugeordnet werden können, in dem das Cookie gespeichert wurde. Dies ermöglicht es den besuchten Internetseiten und Servern, einzelne Browser der Nutzer von anderen Internetbrowsern, die andere Cookies enthalten, zu unterscheiden. Ein bestimmter Internetbrowser kann über die eindeutige Cookie-ID wiedererkannt und identifiziert werden."
+    },
+    "contact": {
+      "title": "Kontaktmöglichkeit",
+      "content": "Die Internetseiten der AI Express enthalten Informationen, die eine schnelle elektronische Kontaktaufnahme zu unserem Unternehmen sowie eine unmittelbare Kommunikation mit uns ermöglichen, was ebenfalls eine allgemeine Adresse der sogenannten elektronischen Post (E-Mail-Adresse) umfasst. Sofern eine betroffene Person per E-Mail oder über ein Kontaktformular mit dem für die Verarbeitung Verantwortlichen in Kontakt tritt, werden die von der betroffenen Person übermittelten personenbezogenen Daten automatisch gespeichert. Diese personenbezogenen Daten, die eine betroffene Person freiwillig an den für die Verarbeitung Verantwortlichen übermittelt, werden für die Zwecke der Bearbeitung oder der Kontaktaufnahme zur betroffenen Person gespeichert. Es erfolgt keine Weitergabe dieser personenbezogenen Daten an Dritte."
+    }
+  },
+  "cookiePolicy": {
+    "nav": "Cookie-Richtlinie",
+    "title": "Cookie-Richtlinie",
+    "lastUpdated": "Letzte Aktualisierung: Dezember 2024",
+    "whatAreCookies": {
+      "title": "Was sind Cookies?",
+      "content": "Cookies sind kleine Textdateien, die von Websites auf Ihrem Computer oder mobilen Gerät gespeichert werden, wenn Sie diese besuchen. Sie werden weit verbreitet verwendet, um sicherzustellen, dass Websites ordnungsgemäß funktionieren, sowie um Informationen darüber bereitzustellen, wie Websites verwendet werden, was uns hilft, deren Funktion zu verbessern."
+    },
+    "howWeUse": {
+      "title": "Wie wir Cookies verwenden",
+      "content": "Wir verwenden Cookies, um verschiedene Aspekte unserer Website zu verstehen und zu verbessern. Unsere Verwendung von Cookies umfasst:",
+      "item1": "Notwendige Cookies: Diese Cookies sind für das Funktionieren unserer Website unbedingt erforderlich und ermöglichen grundlegende Funktionen wie Seitennavigation und Zugriff auf sichere Bereiche der Website.",
+      "item2": "Leistungs-Cookies: Diese Cookies sammeln Informationen darüber, wie Sie unsere Website nutzen, z.B. welche Seiten Sie am häufigsten besuchen. Alle Informationen, die diese Cookies sammeln, sind aggregiert und daher anonym.",
+      "item3": "Funktionalitäts-Cookies: Diese Cookies ermöglichen es unserer Website, sich an Informationen zu erinnern, die die Art beeinflussen, wie sich eine Website verhält oder aussieht, wie z.B. Ihre bevorzugte Sprache oder die Region, in der Sie sich befinden."
+    },
+    "thirdParty": {
+      "title": "Third-Party Cookies",
+      "content": "In einigen Sonderfällen verwenden wir auch Cookies von vertrauenswürdigen Drittanbietern. Zum Beispiel könnten wir Google Analytics verwenden, um zu verstehen, wie Sie unsere Website nutzen. Google Analytics-Platzierungen sind von Google Inc. Der von ihnen verwendete Tracking-Code ist so eingestellt, dass er keine persönlichen Daten wie Namen, E-Mail-Adressen oder Telefonnummern sammelt. Stattdessen erhalten wir anonymisierte Daten, die uns helfen, die Website zu verbessern."
+    },
+    "control": {
+      "title": "Kontrolle über Cookies",
+      "content": "Sie können Cookies kontrollieren oder sogar ablehnen, indem Sie Ihre Browser-Einstellungen anpassen. Beachten Sie jedoch, dass das Deaktivieren von Cookies die Funktionalität vieler Websites beeinträchtigen kann. Die meisten Browser bieten Ihnen die Möglichkeit, Cookies zu verwalten – zum Beispiel, indem Sie alle Cookies ablehnen oder benachrichtigt werden, wenn ein Cookie gesendet wird. Die entsprechenden Einstellungen finden Sie normalerweise im Menü „Optionen“ oder „Einstellungen“ Ihres Browsers."
+    },
+    "changes": {
+      "title": "Änderungen dieser Richtlinie",
+      "content": "Wir können diese Cookie-Richtlinie von Zeit zu Zeit aktualisieren. Jegliche Änderungen werden auf dieser Seite veröffentlicht. Wir empfehlen Ihnen, diese Seite regelmäßig auf Änderungen zu überprüfen, um sicherzustellen, dass Sie mit den aktualisierten Informationen zufrieden sind."
+    }
   }
 }
