--- a/src/data/translations/en.json
+++ b/src/data/translations/en.json
@@ -138,7 +138,9 @@
     "messageTransmitted": "Message Transmitted",
     "responseIncoming": "Your message has been received. Response incoming...",
     "initiateContact": "Initiate Contact",
-    "secureProtocol": "Secure transmission protocol"
+    "secureProtocol": "Secure transmission protocol",
+    "errorOccurred": "Error Occurred",
+    "errorMessage": "There was an issue sending your message. Please try again."
   },
   "cta": {
     "title": "Launch Your AI Transformation",
